# bank-statement-translator

./: .gitignore  CHANGELOG.md  IDENTITY.md  README.md  README.zh-CN.md  TOOLS.md  USER.md  __init__.py  __main__.py  bring_to_front.ps1  cache.py  check_contrib.bat  check_gh.bat  cli.py  codex_call.bat  codex_prompt.txt  config.py  config_git.bat  create1.bat  create2.bat  create_repo.bat  create_vesuvius.bat  delete_all.bat  delete_repos.bat  double_click.ps1  excel_generator.py  exceptions.py  extended_terms.py  force_push1.bat  force_push2.bat  gh_list.bat  gh_logout.bat  gh_logout2.bat  gh_switch2.bat  helpers.py  ift_screenshot.ps1  list_processes.ps1  make_private.bat  ocr_test.ps1  ocr_todesk.py  (+25 more)
.clawhub/: lock.json
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: test.yml
.openclaw/: workspace-state.json
bank_statement_translator/: .env.example  CONTRIBUTING.md  Makefile  README.md  README.zh-CN.md  app.py  config_validator.py  glossary.py  logger.py  progress.py  rate_limiter.py  run_word_translator_pipeline.py  statement_structurer.py  stats.py  translator.py
bank_statement_translator/.github/: PULL_REQUEST_TEMPLATE.md
bank_statement_translator/parsers/: __init__.py
bank_statement_translator/terms/: banking_terms.py  garbled_terms.py
config/: mcporter.json
docs/: 银行流水翻译工具_技术方案书.md
memory/: 2026-03-11.md  2026-03-12.md  2026-03-13.md  2026-03-14.md
summer camp/: Division of Labor.md
terms/: __init__.py  payment_terms.py  readable_terms.py
tests/: test_excel.py  test_metrics.py  test_parser.py
(+53 files in other folders)
